# jumbf-rs

./: .commitlintrc.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release-plz.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr_title.yml  release.yml
benches/: parse_c2pa_cursor.rs  parse_c2pa_file.rs  simple_data_box_cursor.rs
examples/: parse_from_file.rs  parse_from_slice.rs
src/: box_type.rs  debug.rs  lib.rs
src/builder/: data_box_builder.rs  placeholder_data_box.rs  super_box_builder.rs  to_box.rs
src/parser/: data_box.rs  description_box.rs  error.rs  input_data.rs  input_slice.rs  mod.rs  no_reader.rs  super_box.rs
src/tests/parser/: data_box.rs  description_box.rs  super_box.rs
