[package]
authors = ["Eric Scouten <scouten@adobe.com>"]
categories = ["parsing"]
description = "A JUMBF (ISO/IEC 19566-5:2023) parser and builder written in pure Rust."
documentation = "https://docs.rs/jumbf"
edition = "2021"
keywords = ["jumbf"]
license = "MIT OR Apache-2.0"
name = "jumbf"
readme = "README.md"
repository = "https://github.com/scouten-adobe/jumbf-rs"
rust-version = "1.88.0"
version = "0.4.1"

[features]
default = ["parser"]
parser = ["nom", "thiserror"]

[dependencies]
nom = { version = "7.1", optional = true, default-features = false, features = [
  "std",
] }
thiserror = { version = "1.0.58", optional = true }

[dev-dependencies]
codspeed-criterion-compat = "2.4"
criterion = "0.5.1"
hex-literal = "1.1.0"
pretty_assertions_sorted = "1.2.3"

[[bench]]
harness = false
name = "simple_data_box"
required-features = ["parser"]

[[bench]]
harness = false
name = "parse_c2pa"
required-features = ["parser"]

[package.metadata.cargo-udeps.ignore]
development = ["criterion"]
